--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li class="nav-item dropdown mr-3 mt-lg-0 mt-3">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
-                                Хуита
+                                Меню
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="typo.html">Typography</a>
@@ -197,7 +197,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <span></span>
                         </h4>
 						<p>Работа только с юридическими лицами</p>
-						<p>От палеты до БелАЗа</p>
+						<p>От паллеты до БелАЗа</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-5 hide">
