--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <!-- banner-text -->
             <div class="banner-text">
-                <div class="slider-info" style="background-color: #eeeeee; padding: 12px">
+                <div class="slider-info">
                     <h3>Автомобильные грузоперевозки по&nbsp;России и&nbsp;СНГ, некоторые направления Евросоюза</h3>
 					<!-- <p class="mt-3"></p> -->
 					<!--<a class="btn btn-primary mt-lg-5 mt-3 agile-link-bnr" href="about.html" role="button">View More</a>-->
