убрать от паллеты до белаза

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <span></span>
                         </h4>
 						<p>Работа только с юридическими лицами</p>
-						<p>От паллеты до БелАЗа</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-5 hide">
@@ -435,7 +434,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-lg-4 footer-grid pr-5">
 					<h2 class="footer-title border-bottom text-uppercase mb-4 pb-3">О нас</h2>
 					<div class="footer-text">
-						<p>Перевозим по России и СНГ<br>от палеты до БелАЗа</p>
+						<p>Перевозим по России и СНГ</p>
 					</div>
 				</div>
 				<div class="col-lg-4 footer-grid my-lg-0 my-4 hide">
