Inner mail link

--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h2 class="footer-title border-bottom text-uppercase mb-4 pb-3">О нас</h2>
 					<div class="footer-text">
 						<p>Перевозим по России и СНГ</p>
+						<p><a href="http://mail.amiks.su/">Внутренняя почта</a></p>
 					</div>
 				</div>
 				<div class="col-lg-4 footer-grid my-lg-0 my-4 hide">
