--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>АМИКС</title>
+    <title>ТК Стимул</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
-    <meta name="keywords" content="АМИКС грузоперевозки Новосибирск" />
+    <meta name="keywords" content="ТК Стимул грузоперевозки Новосибирск" />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -43,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3">
                 <h1>
                     <a class="navbar-brand text-white" href="index.html">
-                       <i class="far">АМИКС</i>
+                       <i class="far">ТК Стимул</i>
                     </a>
                 </h1>
                 <button class="navbar-toggler ml-md-auto hide" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -435,7 +435,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h2 class="footer-title border-bottom text-uppercase mb-4 pb-3">О нас</h2>
 					<div class="footer-text">
 						<p>Перевозим по России и СНГ</p>
-						<p><a href="http://mail.amiks.su/">Внутренняя почта</a></p>
+						<p><a href="http://mail.tkstimul.ru/">Внутренняя почта</a></p>
 					</div>
 				</div>
 				<div class="col-lg-4 footer-grid my-lg-0 my-4 hide">
@@ -473,7 +473,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<i class="fas fa-map-marker"></i>
 									</div>
 									<div class="col-11">
-										<p>ООО "АМИКС"
+										<p>ООО "ТК Стимул"
 											<span>г.&nbsp;Новосибирск, пр-т Карла Маркса, д.&nbsp;24а, офис&nbsp;4</span>
 										</p>
 										<p>Почтовый адрес: 630073, г.&nbsp;Новосибирск а/я 36</p>
@@ -496,7 +496,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<i class="fas fa-envelope"></i>
 									</div>
 									<div class="col-11">
-										<a href="mailto:info@amiks.su">info@amiks.su</a>
+										<a href="mailto:postmaster@tkstimul.ru">postmaster@tkstimul.ru</a>
 									</div>
 								</div>
 							</li>
