fix email address

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<i class="fas fa-envelope"></i>
 									</div>
 									<div class="col-11">
-										<a href="mailto:postmaster@tkstimul.ru">postmaster@tkstimul.ru</a>
+										<a href="mailto:info@tkstimul.ru">info@tkstimul.ru</a>
 									</div>
 								</div>
 							</li>
